--- a/src/signup.html
+++ b/src/signup.html
@@ -67,12 +67,12 @@
                 <div class="sidebar-item-txt">Login</div>
             </a>
 
-            <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="./login.html">
+            <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="/src/wishList.html">
                 <i class="sidebar-icon fa-solid fa-heart"></i>
                 <div class="sidebar-item-txt">WishList</div>
             </a>
 
-            <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="./login.html">
+            <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="/src/cart.html">
                 <i class="sidebar-icon fa-solid fa-cart-shopping"></i>
                 <div class="sidebar-item-txt">Cart</div>
             </a>
