--- a/src/wishList.html
+++ b/src/wishList.html
@@ -22,7 +22,7 @@
         <div class="navigation wishList-page-nav centered-flex-row-container">
             <ul class="nav-items centered-flex-row-container">
                 <li class="space-S"><a href="/index.html">Home</a></li>
-                <li class="link-active-hover space-S"><a href="./wishList.html">Shop Now</a></li>
+                <li class="link-active-hover space-S"><a href="./productList.html">Shop Now</a></li>
             </ul>
             
             <div class="nav-icons centered-flex-row-container">
