update: fixed link-active for WishList page

--- a/src/wishList.html
+++ b/src/wishList.html
@@ -22,7 +22,7 @@
         <div class="navigation wishList-page-nav centered-flex-row-container">
             <ul class="nav-items centered-flex-row-container">
                 <li class="space-S"><a href="/index.html">Home</a></li>
-                <li class="link-active-hover space-S"><a href="./productList.html">Shop Now</a></li>
+                <li class="space-S"><a href="./productList.html">Shop Now</a></li>
             </ul>
             
             <div class="nav-icons centered-flex-row-container">
@@ -30,9 +30,9 @@
                     <i class="fa-solid fa-arrow-right-to-bracket"></i>
                     <p>Login</p>
                 </a>
-                <a class="nav-icon-item centered-flex-col-container" href="./wishList.html">
+                <a class="nav-icon-item centered-flex-col-container link-active" href="./wishList.html">
                     <i class="fa-solid fa-heart"></i>
-                    <p>WishList</p>
+                    <p class="link-active-hover">WishList</p>
                 </a>
                 <a class="nav-icon-item centered-flex-col-container" href="./cart.html">
                     <i class="fa-solid fa-cart-shopping"></i>
