minor: fixed link active hover for side menu

--- a/src/wishList.html
+++ b/src/wishList.html
@@ -54,8 +54,8 @@
             <hr class="divide-nav-items"/>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="/index.html">
-                <i class="sidebar-icon fa-solid fa-house link-active"></i>
-                <div class="sidebar-item-txt link-active">Home</div>
+                <i class="sidebar-icon fa-solid fa-house"></i>
+                <div class="sidebar-item-txt">Home</div>
             </a>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="./productList.html">
@@ -69,8 +69,8 @@
             </a>
 
             <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="/src/wishList.html">
-                <i class="sidebar-icon fa-solid fa-heart"></i>
-                <div class="sidebar-item-txt">WishList</div>
+                <i class="sidebar-icon fa-solid fa-heart link-active"></i>
+                <div class="sidebar-item-txt link-active">WishList</div>
             </a>
 
             <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="/src/cart.html">
