minor: Fixed link active for all pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="navigation home-page-nav centered-flex-row-container">
             <ul class="nav-items centered-flex-row-container">
-                <li class="space-S"><a href="/index.html">Home</a></li>
+                <li class="link-active-hover space-S"><a class="link-active" href="/index.html">Home</a></li>
                 <li class="space-S"><a href="/src/productList.html">Shop Now</a></li>
             </ul>
 
