--- a/src/login.html
+++ b/src/login.html
@@ -25,9 +25,9 @@
             </ul>
             
             <div class="nav-icons centered-flex-row-container">
-                <a class="nav-icon-item centered-flex-col-container" href="./login.html">
+                <a class="nav-icon-item centered-flex-col-container link-active" href="./login.html">
                     <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                    <p>Login</p>
+                    <p class="link-active-hover">Login</p>
                 </a>
                 <a class="nav-icon-item centered-flex-col-container" href="./wishList.html">
                     <i class="fa-solid fa-heart"></i>
@@ -53,8 +53,8 @@
             <hr class="divide-nav-items"/>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="/index.html">
-                <i class="sidebar-icon fa-solid fa-house link-active"></i>
-                <div class="sidebar-item-txt link-active">Home</div>
+                <i class="sidebar-icon fa-solid fa-house"></i>
+                <div class="sidebar-item-txt">Home</div>
             </a>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="./productList.html">
@@ -63,8 +63,8 @@
             </a>
 
             <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="./login.html">
-                <i class="sidebar-icon fa-solid fa-arrow-right-to-bracket"></i>
-                <div class="sidebar-item-txt">Login</div>
+                <i class="sidebar-icon fa-solid fa-arrow-right-to-bracket link-active"></i>
+                <div class="sidebar-item-txt link-active">Login</div>
             </a>
 
             <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="/src/wishList.html">
