--- a/src/productList.html
+++ b/src/productList.html
@@ -56,13 +56,13 @@
             <hr class="divide-nav-items"/>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="/index.html">
-                <i class="sidebar-icon fa-solid fa-house link-active"></i>
-                <div class="sidebar-item-txt link-active">Home</div>
+                <i class="sidebar-icon fa-solid fa-house"></i>
+                <div class="sidebar-item-txt">Home</div>
             </a>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="/src/productList.html">
-                <i class="sidebar-icon fa-solid fa-cart-shopping"></i>
-                <div class="sidebar-item-txt">Shop Now</div>
+                <i class="sidebar-icon fa-solid fa-cart-shopping link-active"></i>
+                <div class="sidebar-item-txt link-active">Shop Now</div>
             </a>
 
             <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="/src/login.html">
