--- a/src/signup.html
+++ b/src/signup.html
@@ -53,8 +53,8 @@
             <hr class="divide-nav-items"/>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="/index.html">
-                <i class="sidebar-icon fa-solid fa-house link-active"></i>
-                <div class="sidebar-item-txt link-active">Home</div>
+                <i class="sidebar-icon fa-solid fa-house"></i>
+                <div class="sidebar-item-txt">Home</div>
             </a>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="./productList.html">
