minor: Fixed active link on side menu

--- a/src/cart.html
+++ b/src/cart.html
@@ -55,8 +55,8 @@
             <hr class="divide-nav-items"/>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="/index.html">
-                <i class="sidebar-icon fa-solid fa-house link-active"></i>
-                <div class="sidebar-item-txt link-active">Home</div>
+                <i class="sidebar-icon fa-solid fa-house"></i>
+                <div class="sidebar-item-txt">Home</div>
             </a>
 
             <a class="sidebar-item centered-flex-row-container space-S rounded-med" href="./productList.html">
@@ -75,8 +75,8 @@
             </a>
 
             <a class="sidebar-item sidebar-item-actions centered-flex-row-container space-S rounded-med" href="/src/cart.html">
-                <i class="sidebar-icon fa-solid fa-cart-shopping"></i>
-                <div class="sidebar-item-txt">Cart</div>
+                <i class="sidebar-icon fa-solid fa-cart-shopping link-active"></i>
+                <div class="sidebar-item-txt link-active">Cart</div>
             </a>
         </nav>
     </aside>
