update: Refactored + added interactivity using JS

--- a/src/cart.html
+++ b/src/cart.html
@@ -94,7 +94,7 @@
             <div class="cart-empty-container centered-flex-col-container">
                 <h3 class="cart-empty-heading">Your Cart is Empty :(</h3>
                 <p class="cart-empty-content">
-                    Looking for something Blue, but couldn't find it? Check out some 
+                    Looking for something Blue, but couldn't find it? <br> Check out some 
                     <a class="cart-empty-redirect-link" href="./productList.html">fresh new products</a> or add some items from your wishlist!
                 </p>
                 <img class="cart-empty-img" src="/assets/images/empty-cart.svg" alt="Add to Cart"/>
@@ -146,10 +146,10 @@
     
                     <div class="card card-horizontal space-S">
                         <div class="card-img">
-                            <img src="/assets/images/products/fashion-men.jpg" alt="Fashion Men"/>
+                            <img src="/assets/images/products/accessories-1.jpg" alt="Accessories Headphones"/>
                             <div class="cart-card-details flex-col-container">
-                                <div class="card-header">Mens Sherwani</div>
-                                <div class="card-title">₹9,999</div>
+                                <div class="card-header">Boat Headphones</div>
+                                <div class="card-title">₹3,299</div>
                                 <div class="card-quantity-btns flex-row-container">
                                     <button class="increase-qty centered-flex-row-container">+</button>
                                     <span class="qty">1</span>
@@ -166,10 +166,10 @@
     
                     <div class="card card-horizontal space-S">
                         <div class="card-img">
-                            <img src="/assets/images/products/fashion-3.jpg" alt="Men's Jacket"/>
+                            <img src="/assets/images/products/Sports-1.jpg" alt="Sports Shoes"/>
                             <div class="cart-card-details flex-col-container">
-                                <div class="card-header">Men's jacket</div>
-                                <div class="card-title">₹1,599</div>
+                                <div class="card-header">Nike Sports Shoes</div>
+                                <div class="card-title">₹5,099</div>
                                 <div class="card-quantity-btns flex-row-container">
                                     <button class="increase-qty centered-flex-row-container">+</button>
                                     <span class="qty">1</span>
@@ -191,12 +191,12 @@
                     <hr class="divide-nav-items"/>
                     <div class="bill-item flex-row-container">
                         <p class="bill-item-txt">Price(4 items)</p>
-                        <p>₹1,42,597</p>
+                        <p>₹1,39,397</p>
                     </div>
                     <hr class="divide-nav-items"/>
                     <div class="bill-item flex-row-container">
                         <p class="bill-item-txt">Discount</p>
-                        <p>- ₹32,597</p>
+                        <p>- ₹32,397</p>
                     </div>
                     <hr class="divide-nav-items"/>
                     <div class="bill-item flex-row-container">
@@ -206,11 +206,11 @@
                     <hr class="divide-nav-items"/>
                     <div class="bill-item flex-row-container">
                         <h2 class="bill-item-heading">Total Amount</h2>
-                        <h3 class="bill-item-txt heading-4">₹1,11,000</h3>
+                        <h3 class="bill-item-txt heading-4">₹1,08,000</h3>
                     </div>
                     <hr class="divide-nav-items"/>
                     <p class="amt-saved-txt">
-                        You will save ₹32,597 on this order.
+                        You will save ₹32,397 on this order.
                     </p>
                     <a href="#">
                         <button class="btn btn-primary rounded-med" id="place-order-btn">PLACE ORDER</button>
@@ -248,5 +248,6 @@
         </p>
     </footer>
     <script src="./js/nav-menu.js"></script>
+    <script src="./js/empty-cart-msg.js"></script>
 </body>
 </html>
